--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,7 @@
     ul.w3agile_footer_grid_list i.fa.fa-twitter {
         margin-right: 1em;
     }
+
     /*-- //footer --*/
     /*-- about--*/
     .w3-about,.wthree-news{
@@ -1166,6 +1167,11 @@
         display: block;
         text-align: center;
         word-wrap: break-word;
+    }
+    image-round-frame{
+        border: 2px solid dark; 
+        border-radius: 100%;
+        max-width: 250px;
     }
     @media (max-width:991px){
     	h3.agileits-icons-title {
