--- a/css/style.css
+++ b/css/style.css
@@ -870,7 +870,7 @@
     /*-- //about--*/
     /*-- news --*/ 
     .news {
-        background: url(../images/bodhi2.jpg) no-repeat center 0px fixed;
+        background: url(../images/bodhi2.png) no-repeat center 0px fixed;
         background-size: cover;
     	padding: 5em 0;
     } 
